syntax = "proto3";

package user_stats;

import "messages.proto";

service UserStatsService {
  rpc Query(QueryRequest) returns (stream User) {}
  rpc RawQuery(RawQueryRequest) returns (stream User) {}
}
